k8s/overlays/local-ports/server-rm-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: server-rm-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web8800
spec:
  rules:
  - host: server-rm.localhost
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: server-rm
            port:
              number: 8080
